# aco-learner

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  pipeline.py
app/converters/: __init__.py  base.py  pdf_to_md.py
app/synthesizers/: __init__.py  base.py  edge.py  kokoro_synth.py  openai_tts.py
app/transformers/: toc.py  voice_script.py
app/ui/: main.py
tests/: test_synthesizers.py  test_toc.py  test_voice_script.py
